# kaldi

./: CMakeLists.txt  README.md  README.md~  package.xml
scripts/: README  graph  nnet_a_gpu_online  server.sh  start-asr-robocup-server.py
scripts/tmp/: start-asr-server.sh
src/: README  kaldi.cpp
